force-app/main/default/objects/ApprovalRequest__c/ApprovalRequest__c.object-meta.xml
<CustomObject>
    <label>承認申請</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>承認申請No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>