force-app/main/default/objects/ApprovalRequest__c/fields/AlertMemoAtSubmission__c.field-meta.xml
<CustomField>
    <fullName>AlertMemoAtSubmission__c</fullName>
    <label>警告設定（申請時）</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>