force-app/main/default/objects/ApprovalRequest__c/fields/application_category__c.field-meta.xml
<CustomField>
    <fullName>application_category__c</fullName>
    <label>申請カテゴリ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>所有権、残あり先振込承認</fullName>
            </value>
            <value>
                <fullName>所有権付き解除前引き上げ</fullName>
            </value>
            <value>
                <fullName>封印申請</fullName>
            </value>
            <value>
                <fullName>車検証・ナンバープレート再発行時のはなまる理由書利用</fullName>
            </value>
            <value>
                <fullName>現在登録事項の発行</fullName>
            </value>
            <value>
                <fullName>他社AA・書類OK前出品</fullName>
            </value>
            <value>
                <fullName>自社AA・月末書類OK前出品</fullName>
            </value>
            <value>
                <fullName>書類OK前出品</fullName>
            </value>
            <value>
                <fullName>永久抹消条件での買取</fullName>
            </value>
            <value>
                <fullName>書類なし案件の買取</fullName>
            </value>
            <value>
                <fullName>永久抹消条件または書類なし案件の買取</fullName>
            </value>
            <value>
                <fullName>先売り申請</fullName>
            </value>
            <value>
                <fullName>台帳作成済みキャンセル・在庫削除</fullName>
            </value>
            <value>
                <fullName>赤字案件の事前買取申請</fullName>
            </value>
            <value>
                <fullName>経費を伴う食事接待</fullName>
            </value>
            <value>
                <fullName>賛助会費・会合参加・出店祝い等の支出</fullName>
            </value>
            <value>
                <fullName>支店備品2万円以上</fullName>
            </value>
            <value>
                <fullName>菓子折り・香典・花代</fullName>
            </value>
            <value>
                <fullName>法人営業の食事会経費</fullName>
            </value>
            <value>
                <fullName>修理承認</fullName>
            </value>
            <value>
                <fullName>その他承認申請</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>