force-app/main/default/objects/ApprovalRequest__c/fields/application_reason__c.field-meta.xml
<CustomField>
    <fullName>application_reason__c</fullName>
    <label>申請理由</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>