force-app/main/default/objects/ApprovalRequest__c/fields/ApprovalRoute__c.field-meta.xml
<CustomField>
    <fullName>ApprovalRoute__c</fullName>
    <label>承認ルート</label>
    <length>255</length>
    <type>Text</type>
</CustomField>