force-app/main/default/objects/ApprovalRequest__c/fields/AssignedApprover__c.field-meta.xml
<CustomField>
    <fullName>AssignedApprover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>第1承認者</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>第1承認担当の申請</relationshipLabel>
    <relationshipName>ApprovalRequestsAsApprover</relationshipName>
    <type>Lookup</type>
</CustomField>