force-app/main/default/objects/ApprovalRequest__c/fields/cancellation_reason__c.field-meta.xml
<CustomField>
    <fullName>cancellation_reason__c</fullName>
    <label>キャンセル理由</label>
    <type>TextArea</type>
</CustomField>