force-app/main/default/objects/ApprovalRequest__c/fields/CarNoAtSubmission__c.field-meta.xml
<CustomField>
    <fullName>CarNoAtSubmission__c</fullName>
    <label>車台番号（申請時）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>