force-app/main/default/objects/ApprovalRequest__c/fields/CollectedDocumentsAtSubmission__c.field-meta.xml
<CustomField>
    <fullName>CollectedDocumentsAtSubmission__c</fullName>
    <label>回収書類（申請時）</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>