force-app/main/default/objects/ApprovalRequest__c/fields/CompletedAt__c.field-meta.xml
<CustomField>
    <fullName>CompletedAt__c</fullName>
    <label>承認処理完了日時</label>
    <type>DateTime</type>
</CustomField>