force-app/main/default/objects/ApprovalRequest__c/fields/document_collection_shipping_status__c.field-meta.xml
<CustomField>
    <fullName>document_collection_shipping_status__c</fullName>
    <label>書類の状況（回収・発送状況）</label>
    <type>TextArea</type>
</CustomField>