force-app/main/default/objects/ApprovalRequest__c/fields/ExpectedProfit__c.field-meta.xml
<CustomField>
    <fullName>ExpectedProfit__c</fullName>
    <label>見込み利益（申請時）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>