force-app/main/default/objects/ApprovalRequest__c/fields/FourthApprover__c.field-meta.xml
<CustomField>
    <fullName>FourthApprover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>第4承認者</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>第4承認申請</relationshipLabel>
    <relationshipName>FourthApprovalRequests</relationshipName>
    <type>Lookup</type>
</CustomField>