force-app/main/default/objects/ApprovalRequest__c/fields/has_balance_certificate_collection__c.field-meta.xml
<CustomField>
    <fullName>has_balance_certificate_collection__c</fullName>
    <label>残債証明の回収有無</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>あり</fullName>
            </value>
            <value>
                <fullName>なし</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>