force-app/main/default/objects/ApprovalRequest__c/fields/NegotiationHistory__c.field-meta.xml
<CustomField>
    <fullName>NegotiationHistory__c</fullName>
    <label>商談の経緯（申請時）</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>