force-app/main/default/objects/ApprovalRequest__c/fields/no_document_permanent_deregistration_rea__c.field-meta.xml
<CustomField>
    <fullName>no_document_permanent_deregistration_rea__c</fullName>
    <label>書なし・永久抹消条件の理由</label>
    <type>TextArea</type>
</CustomField>