force-app/main/default/objects/ApprovalRequest__c/fields/NoDocumentReason__c.field-meta.xml
<CustomField>
    <fullName>NoDocumentReason__c</fullName>
    <label>書類なし理由</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>