force-app/main/default/objects/ApprovalRequest__c/fields/outstanding_balance_amount__c.field-meta.xml
<CustomField>
    <fullName>outstanding_balance_amount__c</fullName>
    <label>残債金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>