force-app/main/default/objects/ApprovalRequest__c/fields/ownership_company__c.field-meta.xml
<CustomField>
    <fullName>ownership_company__c</fullName>
    <label>所有権会社</label>
    <length>50</length>
    <type>Text</type>
</CustomField>