force-app/main/default/objects/ApprovalRequest__c/fields/OwnershipAtSubmission__c.field-meta.xml
<CustomField>
    <fullName>OwnershipAtSubmission__c</fullName>
    <label>所有権（申請時）</label>
    <length>20</length>
    <type>Text</type>
</CustomField>