force-app/main/default/objects/ApprovalRequest__c/fields/PermanentDeregistrationReason__c.field-meta.xml
<CustomField>
    <fullName>PermanentDeregistrationReason__c</fullName>
    <label>永久抹消条件の理由</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>