force-app/main/default/objects/ApprovalRequest__c/fields/ProcessingDivisionAtSubmission__c.field-meta.xml
<CustomField>
    <fullName>ProcessingDivisionAtSubmission__c</fullName>
    <label>処理区分（申請時）</label>
    <length>100</length>
    <type>Text</type>
</CustomField>