force-app/main/default/objects/ApprovalRequest__c/fields/PurchaseOpportunity__c.field-meta.xml
<CustomField>
    <fullName>PurchaseOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>買取商談</label>
    <referenceTo>PurchaseOpportunity__c</referenceTo>
    <relationshipLabel>承認申請</relationshipLabel>
    <relationshipName>ApprovalRequests</relationshipName>
    <type>Lookup</type>
</CustomField>