force-app/main/default/objects/ApprovalRequest__c/fields/RegistrationNo__c.field-meta.xml
<CustomField>
    <fullName>RegistrationNo__c</fullName>
    <label>登録番号（申請時）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>