force-app/main/default/objects/ApprovalRequest__c/fields/RequestBranch__c.field-meta.xml
<CustomField>
    <fullName>RequestBranch__c</fullName>
    <label>申請対象支店</label>
    <length>100</length>
    <type>Text</type>
</CustomField>