force-app/main/default/objects/ApprovalRequest__c/fields/Requester__c.field-meta.xml
<CustomField>
    <fullName>Requester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>申請者</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>申請した承認申請</relationshipLabel>
    <relationshipName>ApprovalRequestsAsRequester</relationshipName>
    <type>Lookup</type>
</CustomField>