force-app/main/default/objects/ApprovalRequest__c/fields/SecondApprover__c.field-meta.xml
<CustomField>
    <fullName>SecondApprover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>第2承認者</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>第2承認担当の申請</relationshipLabel>
    <relationshipName>ApprovalRequestsAsSecondApprover</relationshipName>
    <type>Lookup</type>
</CustomField>