force-app/main/default/objects/ApprovalRequest__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>申請状況</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>下書き</fullName>
                <default>true</default>
                <label>下書き</label>
            </value>
            <value>
                <fullName>申請中</fullName>
            </value>
            <value>
                <fullName>承認済み</fullName>
            </value>
            <value>
                <fullName>却下</fullName>
            </value>
            <value>
                <fullName>取下げ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>