force-app/main/default/objects/ApprovalRequest__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>申請件名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>