force-app/main/default/objects/ApprovalRequest__c/fields/SubmittedAt__c.field-meta.xml
<CustomField>
    <fullName>SubmittedAt__c</fullName>
    <label>申請日時</label>
    <type>DateTime</type>
</CustomField>