force-app/main/default/objects/ApprovalRequest__c/fields/ThirdApprover__c.field-meta.xml
<CustomField>
    <fullName>ThirdApprover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>第3承認者</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>第3承認申請</relationshipLabel>
    <relationshipName>ThirdApprovalRequests</relationshipName>
    <type>Lookup</type>
</CustomField>