force-app/main/default/objects/ApprovalRequest__c/validationRules/ApproverSequenceMustBeContinuous.validationRule-meta.xml
<ValidationRule>
    <active>true</active>
    <description>承認者が第1承認者から順番に設定されていることを確認する。</description>
    <errorConditionFormula>OR(
        AND(
            ISBLANK(AssignedApprover__c),
            NOT(ISBLANK(SecondApprover__c))
        ),
        AND(
            ISBLANK(SecondApprover__c),
            NOT(ISBLANK(ThirdApprover__c))
        ),
        AND(
            ISBLANK(ThirdApprover__c),
            NOT(ISBLANK(FourthApprover__c))
        )
    )</errorConditionFormula>
    <errorMessage>承認者は第1承認者から順番に設定してください。</errorMessage>
</ValidationRule>