force-app/main/default/objects/ApprovalRequest__c/validationRules/RequesterCannotBeApprover.validationRule-meta.xml
<ValidationRule>
    <fullName>RequesterCannotBeApprover</fullName>
    <active>true</active>
    <description>申請者をいずれかの承認者として設定できないようにする。</description>
    <errorConditionFormula>AND(
        NOT(ISBLANK(Requester__c)),
        OR(
            Requester__c = AssignedApprover__c,
            Requester__c = SecondApprover__c,
            Requester__c = ThirdApprover__c,
            Requester__c = FourthApprover__c
        )
    )</errorConditionFormula>
    <errorMessage>申請者と承認者は同じユーザーに設定できません。</errorMessage>
</ValidationRule>